parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STEP

Grammar

Rule 0     S' -> S
Rule 1     S -> stmt S
Rule 2     S -> <empty>
Rule 3     stmt -> STRUCT NAME LCBRACKET statement RCBRACKET
Rule 4     statement -> DTYPE NAME SEMICOLON
Rule 5     stmt -> NAME NAME SEMICOLON
Rule 6     stmt -> NAME ARROW NAME EQUAL exp SEMICOLON
Rule 7     stmt -> NAME operator SEMICOLON
Rule 8     operator -> PLUSPLUS
Rule 9     operator -> MINUSMINUS
Rule 10    stmt -> IF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
Rule 11    stmt -> ELIF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
Rule 12    stmt -> ELSE LCBRACKET stmt RCBRACKET
Rule 13    stmt -> PRINT LPAREN exp RPAREN SEMICOLON
Rule 14    exp -> exp PLUS exp
Rule 15    exp -> exp MINUS exp
Rule 16    exp -> exp DIVIDE exp
Rule 17    exp -> exp MULTIPLY exp
Rule 18    exp -> exp MODULUS exp
Rule 19    exp -> exp POWER exp
Rule 20    exp -> exp LESSTHAN exp
Rule 21    exp -> exp GREATERTHAN exp
Rule 22    exp -> exp GREATERTHANEQUALTO exp
Rule 23    exp -> exp LESSTHANEQUALTO exp
Rule 24    exp -> exp NOTEQUAL exp
Rule 25    exp -> exp EQUALEQUAL exp
Rule 26    exp -> exp AND exp
Rule 27    exp -> exp OR exp
Rule 28    exp -> NAME ARROW NAME
Rule 29    exp -> LPAREN exp RPAREN
Rule 30    exp -> NOT exp
Rule 31    exp -> exp COMMA exp
Rule 32    exp -> INT
Rule 33    exp -> FLOAT
Rule 34    exp -> STRING
Rule 35    exp -> CHAR
Rule 36    exp -> BOOL
Rule 37    exp -> NAME
Rule 38    stmt -> DTYPE NAME EQUAL exp SEMICOLON
Rule 39    DTYPE -> int
Rule 40    DTYPE -> string
Rule 41    DTYPE -> float
Rule 42    DTYPE -> bool
Rule 43    DTYPE -> char
Rule 44    stmt -> NAME EQUAL exp SEMICOLON
Rule 45    stmt -> FOR NAME EQUAL FROM TO END stmt NEXT
Rule 46    FROM -> INT
Rule 47    FROM -> NAME
Rule 48    END -> INT
Rule 49    END -> NAME

Terminals, with rules where they appear

AND                  : 26
ARROW                : 6 28
BOOL                 : 36
CHAR                 : 35
COMMA                : 31
DIVIDE               : 16
ELIF                 : 11
ELSE                 : 12
EQUAL                : 6 38 44 45
EQUALEQUAL           : 25
FLOAT                : 33
FOR                  : 45
GREATERTHAN          : 21
GREATERTHANEQUALTO   : 22
IF                   : 10
INT                  : 32 46 48
LCBRACKET            : 3 10 11 12
LESSTHAN             : 20
LESSTHANEQUALTO      : 23
LPAREN               : 10 11 13 29
MINUS                : 15
MINUSMINUS           : 9
MODULUS              : 18
MULTIPLY             : 17
NAME                 : 3 4 5 5 6 6 7 28 28 37 38 44 45 47 49
NEXT                 : 45
NOT                  : 30
NOTEQUAL             : 24
OR                   : 27
PLUS                 : 14
PLUSPLUS             : 8
POWER                : 19
PRINT                : 13
RCBRACKET            : 3 10 11 12
RPAREN               : 10 11 13 29
SEMICOLON            : 4 5 6 7 13 38 44
STEP                 : 
STRING               : 34
STRUCT               : 3
TO                   : 45
bool                 : 42
char                 : 43
error                : 
float                : 41
int                  : 39
string               : 40

Nonterminals, with rules where they appear

DTYPE                : 4 38
END                  : 45
FROM                 : 45
S                    : 1 0
exp                  : 6 10 11 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 29 30 31 31 38 44
operator             : 7
statement            : 3
stmt                 : 1 10 11 12 45

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . stmt S
    (2) S -> .
    (3) stmt -> . STRUCT NAME LCBRACKET statement RCBRACKET
    (5) stmt -> . NAME NAME SEMICOLON
    (6) stmt -> . NAME ARROW NAME EQUAL exp SEMICOLON
    (7) stmt -> . NAME operator SEMICOLON
    (10) stmt -> . IF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (11) stmt -> . ELIF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (12) stmt -> . ELSE LCBRACKET stmt RCBRACKET
    (13) stmt -> . PRINT LPAREN exp RPAREN SEMICOLON
    (38) stmt -> . DTYPE NAME EQUAL exp SEMICOLON
    (44) stmt -> . NAME EQUAL exp SEMICOLON
    (45) stmt -> . FOR NAME EQUAL FROM TO END stmt NEXT
    (39) DTYPE -> . int
    (40) DTYPE -> . string
    (41) DTYPE -> . float
    (42) DTYPE -> . bool
    (43) DTYPE -> . char

    $end            reduce using rule 2 (S -> .)
    STRUCT          shift and go to state 3
    NAME            shift and go to state 4
    IF              shift and go to state 5
    ELIF            shift and go to state 6
    ELSE            shift and go to state 7
    PRINT           shift and go to state 8
    FOR             shift and go to state 10
    int             shift and go to state 11
    string          shift and go to state 12
    float           shift and go to state 13
    bool            shift and go to state 14
    char            shift and go to state 15

    S                              shift and go to state 1
    stmt                           shift and go to state 2
    DTYPE                          shift and go to state 9

state 1

    (0) S' -> S .



state 2

    (1) S -> stmt . S
    (1) S -> . stmt S
    (2) S -> .
    (3) stmt -> . STRUCT NAME LCBRACKET statement RCBRACKET
    (5) stmt -> . NAME NAME SEMICOLON
    (6) stmt -> . NAME ARROW NAME EQUAL exp SEMICOLON
    (7) stmt -> . NAME operator SEMICOLON
    (10) stmt -> . IF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (11) stmt -> . ELIF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (12) stmt -> . ELSE LCBRACKET stmt RCBRACKET
    (13) stmt -> . PRINT LPAREN exp RPAREN SEMICOLON
    (38) stmt -> . DTYPE NAME EQUAL exp SEMICOLON
    (44) stmt -> . NAME EQUAL exp SEMICOLON
    (45) stmt -> . FOR NAME EQUAL FROM TO END stmt NEXT
    (39) DTYPE -> . int
    (40) DTYPE -> . string
    (41) DTYPE -> . float
    (42) DTYPE -> . bool
    (43) DTYPE -> . char

    $end            reduce using rule 2 (S -> .)
    STRUCT          shift and go to state 3
    NAME            shift and go to state 4
    IF              shift and go to state 5
    ELIF            shift and go to state 6
    ELSE            shift and go to state 7
    PRINT           shift and go to state 8
    FOR             shift and go to state 10
    int             shift and go to state 11
    string          shift and go to state 12
    float           shift and go to state 13
    bool            shift and go to state 14
    char            shift and go to state 15

    stmt                           shift and go to state 2
    S                              shift and go to state 16
    DTYPE                          shift and go to state 9

state 3

    (3) stmt -> STRUCT . NAME LCBRACKET statement RCBRACKET

    NAME            shift and go to state 17


state 4

    (5) stmt -> NAME . NAME SEMICOLON
    (6) stmt -> NAME . ARROW NAME EQUAL exp SEMICOLON
    (7) stmt -> NAME . operator SEMICOLON
    (44) stmt -> NAME . EQUAL exp SEMICOLON
    (8) operator -> . PLUSPLUS
    (9) operator -> . MINUSMINUS

    NAME            shift and go to state 18
    ARROW           shift and go to state 19
    EQUAL           shift and go to state 20
    PLUSPLUS        shift and go to state 22
    MINUSMINUS      shift and go to state 23

    operator                       shift and go to state 21

state 5

    (10) stmt -> IF . LPAREN exp RPAREN LCBRACKET stmt RCBRACKET

    LPAREN          shift and go to state 24


state 6

    (11) stmt -> ELIF . LPAREN exp RPAREN LCBRACKET stmt RCBRACKET

    LPAREN          shift and go to state 25


state 7

    (12) stmt -> ELSE . LCBRACKET stmt RCBRACKET

    LCBRACKET       shift and go to state 26


state 8

    (13) stmt -> PRINT . LPAREN exp RPAREN SEMICOLON

    LPAREN          shift and go to state 27


state 9

    (38) stmt -> DTYPE . NAME EQUAL exp SEMICOLON

    NAME            shift and go to state 28


state 10

    (45) stmt -> FOR . NAME EQUAL FROM TO END stmt NEXT

    NAME            shift and go to state 29


state 11

    (39) DTYPE -> int .

    NAME            reduce using rule 39 (DTYPE -> int .)


state 12

    (40) DTYPE -> string .

    NAME            reduce using rule 40 (DTYPE -> string .)


state 13

    (41) DTYPE -> float .

    NAME            reduce using rule 41 (DTYPE -> float .)


state 14

    (42) DTYPE -> bool .

    NAME            reduce using rule 42 (DTYPE -> bool .)


state 15

    (43) DTYPE -> char .

    NAME            reduce using rule 43 (DTYPE -> char .)


state 16

    (1) S -> stmt S .

    $end            reduce using rule 1 (S -> stmt S .)


state 17

    (3) stmt -> STRUCT NAME . LCBRACKET statement RCBRACKET

    LCBRACKET       shift and go to state 30


state 18

    (5) stmt -> NAME NAME . SEMICOLON

    SEMICOLON       shift and go to state 31


state 19

    (6) stmt -> NAME ARROW . NAME EQUAL exp SEMICOLON

    NAME            shift and go to state 32


state 20

    (44) stmt -> NAME EQUAL . exp SEMICOLON
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 34

state 21

    (7) stmt -> NAME operator . SEMICOLON

    SEMICOLON       shift and go to state 42


state 22

    (8) operator -> PLUSPLUS .

    SEMICOLON       reduce using rule 8 (operator -> PLUSPLUS .)


state 23

    (9) operator -> MINUSMINUS .

    SEMICOLON       reduce using rule 9 (operator -> MINUSMINUS .)


state 24

    (10) stmt -> IF LPAREN . exp RPAREN LCBRACKET stmt RCBRACKET
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 43

state 25

    (11) stmt -> ELIF LPAREN . exp RPAREN LCBRACKET stmt RCBRACKET
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 44

state 26

    (12) stmt -> ELSE LCBRACKET . stmt RCBRACKET
    (3) stmt -> . STRUCT NAME LCBRACKET statement RCBRACKET
    (5) stmt -> . NAME NAME SEMICOLON
    (6) stmt -> . NAME ARROW NAME EQUAL exp SEMICOLON
    (7) stmt -> . NAME operator SEMICOLON
    (10) stmt -> . IF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (11) stmt -> . ELIF LPAREN exp RPAREN LCBRACKET stmt RCBRACKET
    (12) stmt -> . ELSE LCBRACKET stmt RCBRACKET
    (13) stmt -> . PRINT LPAREN exp RPAREN SEMICOLON
    (38) stmt -> . DTYPE NAME EQUAL exp SEMICOLON
    (44) stmt -> . NAME EQUAL exp SEMICOLON
    (45) stmt -> . FOR NAME EQUAL FROM TO END stmt NEXT
    (39) DTYPE -> . int
    (40) DTYPE -> . string
    (41) DTYPE -> . float
    (42) DTYPE -> . bool
    (43) DTYPE -> . char

    STRUCT          shift and go to state 3
    NAME            shift and go to state 4
    IF              shift and go to state 5
    ELIF            shift and go to state 6
    ELSE            shift and go to state 7
    PRINT           shift and go to state 8
    FOR             shift and go to state 10
    int             shift and go to state 11
    string          shift and go to state 12
    float           shift and go to state 13
    bool            shift and go to state 14
    char            shift and go to state 15

    stmt                           shift and go to state 45
    DTYPE                          shift and go to state 9

state 27

    (13) stmt -> PRINT LPAREN . exp RPAREN SEMICOLON
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 46

state 28

    (38) stmt -> DTYPE NAME . EQUAL exp SEMICOLON

    EQUAL           shift and go to state 47


state 29

    (45) stmt -> FOR NAME . EQUAL FROM TO END stmt NEXT

    EQUAL           shift and go to state 48


state 30

    (3) stmt -> STRUCT NAME LCBRACKET . statement RCBRACKET
    (4) statement -> . DTYPE NAME SEMICOLON
    (39) DTYPE -> . int
    (40) DTYPE -> . string
    (41) DTYPE -> . float
    (42) DTYPE -> . bool
    (43) DTYPE -> . char

    int             shift and go to state 11
    string          shift and go to state 12
    float           shift and go to state 13
    bool            shift and go to state 14
    char            shift and go to state 15

    statement                      shift and go to state 49
    DTYPE                          shift and go to state 50

state 31

    (5) stmt -> NAME NAME SEMICOLON .

    STRUCT          reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    NAME            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    IF              reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    ELIF            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    ELSE            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    PRINT           reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    FOR             reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    int             reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    string          reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    float           reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    bool            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    char            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    $end            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    RCBRACKET       reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)
    NEXT            reduce using rule 5 (stmt -> NAME NAME SEMICOLON .)


state 32

    (6) stmt -> NAME ARROW NAME . EQUAL exp SEMICOLON

    EQUAL           shift and go to state 51


state 33

    (28) exp -> NAME . ARROW NAME
    (37) exp -> NAME .

    ARROW           shift and go to state 52
    SEMICOLON       reduce using rule 37 (exp -> NAME .)
    PLUS            reduce using rule 37 (exp -> NAME .)
    MINUS           reduce using rule 37 (exp -> NAME .)
    DIVIDE          reduce using rule 37 (exp -> NAME .)
    MULTIPLY        reduce using rule 37 (exp -> NAME .)
    MODULUS         reduce using rule 37 (exp -> NAME .)
    POWER           reduce using rule 37 (exp -> NAME .)
    LESSTHAN        reduce using rule 37 (exp -> NAME .)
    GREATERTHAN     reduce using rule 37 (exp -> NAME .)
    GREATERTHANEQUALTO reduce using rule 37 (exp -> NAME .)
    LESSTHANEQUALTO reduce using rule 37 (exp -> NAME .)
    NOTEQUAL        reduce using rule 37 (exp -> NAME .)
    EQUALEQUAL      reduce using rule 37 (exp -> NAME .)
    AND             reduce using rule 37 (exp -> NAME .)
    OR              reduce using rule 37 (exp -> NAME .)
    COMMA           reduce using rule 37 (exp -> NAME .)
    RPAREN          reduce using rule 37 (exp -> NAME .)


state 34

    (44) stmt -> NAME EQUAL exp . SEMICOLON
    (14) exp -> exp . PLUS exp
    (15) exp -> exp . MINUS exp
    (16) exp -> exp . DIVIDE exp
    (17) exp -> exp . MULTIPLY exp
    (18) exp -> exp . MODULUS exp
    (19) exp -> exp . POWER exp
    (20) exp -> exp . LESSTHAN exp
    (21) exp -> exp . GREATERTHAN exp
    (22) exp -> exp . GREATERTHANEQUALTO exp
    (23) exp -> exp . LESSTHANEQUALTO exp
    (24) exp -> exp . NOTEQUAL exp
    (25) exp -> exp . EQUALEQUAL exp
    (26) exp -> exp . AND exp
    (27) exp -> exp . OR exp
    (31) exp -> exp . COMMA exp

    SEMICOLON       shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    DIVIDE          shift and go to state 56
    MULTIPLY        shift and go to state 57
    MODULUS         shift and go to state 58
    POWER           shift and go to state 59
    LESSTHAN        shift and go to state 60
    GREATERTHAN     shift and go to state 61
    GREATERTHANEQUALTO shift and go to state 62
    LESSTHANEQUALTO shift and go to state 63
    NOTEQUAL        shift and go to state 64
    EQUALEQUAL      shift and go to state 65
    AND             shift and go to state 66
    OR              shift and go to state 67
    COMMA           shift and go to state 68


state 35

    (29) exp -> LPAREN . exp RPAREN
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 69

state 36

    (30) exp -> NOT . exp
    (14) exp -> . exp PLUS exp
    (15) exp -> . exp MINUS exp
    (16) exp -> . exp DIVIDE exp
    (17) exp -> . exp MULTIPLY exp
    (18) exp -> . exp MODULUS exp
    (19) exp -> . exp POWER exp
    (20) exp -> . exp LESSTHAN exp
    (21) exp -> . exp GREATERTHAN exp
    (22) exp -> . exp GREATERTHANEQUALTO exp
    (23) exp -> . exp LESSTHANEQUALTO exp
    (24) exp -> . exp NOTEQUAL exp
    (25) exp -> . exp EQUALEQUAL exp
    (26) exp -> . exp AND exp
    (27) exp -> . exp OR exp
    (28) exp -> . NAME ARROW NAME
    (29) exp -> . LPAREN exp RPAREN
    (30) exp -> . NOT exp
    (31) exp -> . exp COMMA exp
    (32) exp -> . INT
    (33) exp -> . FLOAT
    (34) exp -> . STRING
    (35) exp -> . CHAR
    (36) exp -> . BOOL
    (37) exp -> . NAME

    NAME            shift and go to state 33
    LPAREN          shift and go to state 35
    NOT             shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    STRING          shift and go to state 39
    CHAR            shift and go to state 40
    BOOL            shift and go to state 41

    exp                            shift and go to state 70

state 37

    (32) exp -> INT .

    SEMICOLON       reduce using rule 32 (exp -> INT .)
    PLUS            reduce using rule 32 (exp -> INT .)
    MINUS           reduce using rule 32 (exp -> INT .)
    DIVIDE          reduce using rule 32 (exp -> INT .)
    MULTIPLY        reduce using rule 32 (exp -> INT .)
    MODULUS         reduce using rule 32 (exp -> INT .)
    POWER           reduce using rule 32 (exp -> INT .)
    LESSTHAN        reduce using rule 32 (exp -> INT .)
    GREATERTHAN     reduce using rule 32 (exp -> INT .)
    GREATERTHANEQUALTO reduce using rule 32 (exp -> INT .)
    LESSTHANEQUALTO reduce using rule 32 (exp -> INT .)
    NOTEQUAL        reduce using rule 32 (exp -> INT .)
    EQUALEQUAL      reduce using rule 32 (exp -> INT .)
    AND             reduce using rule 32 (exp -> INT .)
    OR              reduce using rule 32 (exp -> INT .)
    COMMA           reduce using rule 32 (exp -> INT .)
    RPAREN          reduce using rule 32 (exp -> INT .)


state 38

    (33) exp -> FLOAT .

    SEMICOLON       reduce using rule 33 (exp -> FLOAT .)
    PLUS            reduce using rule 33 (exp -> FLOAT .)
    MINUS           reduce using rule 33 (exp -> FLOAT .)
    DIVIDE          reduce using rule 33 (exp -> FLOAT .)
    MULTIPLY        reduce using rule 33 (exp -> FLOAT .)
    MODULUS         reduce using rule 33 (exp -> FLOAT .)
    POWER           reduce using rule 33 (exp -> FLOAT .)
    LESSTHAN        reduce using rule 33 (exp -> FLOAT .)
    GREATERTHAN     reduce using rule 33 (exp -> FLOAT .)
    GREATERTHANEQUALTO reduce using rule 33 (exp -> FLOAT .)
    LESSTHANEQUALTO reduce using rule 33 (exp -> FLOAT .)
    NOTEQUAL        reduce using rule 33 (exp -> FLOAT .)
    EQUALEQUAL      reduce using rule 33 (exp -> FLOAT .)
    AND             reduce using rule 33 (exp -> FLOAT .)
    OR              reduce using rule 33 (exp -> FLOAT .)
    COMMA           reduce using rule 33 (exp -> FLOAT .)
    RPAREN          reduce using rule 33 (exp -> FLOAT .)


state 39

    (34) exp -> STRING .

    SEMICOLON       reduce using rule 34 (exp -> STRING .)
    PLUS            reduce using rule 34 (exp -> STRING .)
    MINUS           reduce using rule 34 (exp -> STRING .)
    DIVIDE          reduce using rule 34 (exp -> STRING .)
    MULTIPLY        reduce using rule 34 (exp -> STRING .)
    MODULUS         reduce using rule 34 (exp -> STRING .)
    POWER           reduce using rule 34 (exp -> STRING .)
    LESSTHAN        reduce using rule 34 (exp -> STRING .)
    GREATERTHAN     reduce using rule 34 (exp -> STRING .)
    GREATERTHANEQUALTO reduce using rule 34 (exp -> STRING .)
    LESSTHANEQUALTO reduce using rule 34 (exp -> STRING .)
    NOTEQUAL        reduce using rule 34 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 34 (exp -> STRING .)
    AND             reduce using rule 34 (exp -> STRING .)
    OR              reduce using rule 34 (exp -> STRING .)
    COMMA           reduce using rule 34 (exp -> STRING .)
    RPAREN          reduce using rule 34 (exp -> STRING .)


state 40

    (35) exp -> CHAR .

    SEMICOLON       reduce using rule 35 (exp -> CHAR .)
    PLUS            reduce using rule 35 (exp -> CHAR .)
    MINUS           reduce using rule 35 (exp -> CHAR .)
    DIVIDE          reduce using rule 35 (exp -> CHAR .)
    MULTIPLY        reduce using rule 35 (exp -> CHAR .)
    MODULUS         reduce using rule 35 (exp -> CHAR .)
    POWER           reduce using rule 35 (exp -> CHAR .)
    LESSTHAN        reduce using rule 35 (exp -> CHAR .)
    GREATERTHAN     reduce using rule 35 (exp -> CHAR .)
    GREATERTHANEQUALTO reduce using rule 35 (exp -> CHAR .)
    LESSTHANEQUALTO reduce using rule 35 (exp -> CHAR .)
    NOTEQUAL        reduce using rule 35 (exp -> CHAR .)
    EQUALEQUAL      reduce using rule 35 (exp -> CHAR .)
    AND             reduce using rule 35 (exp -> CHAR .)
    OR              reduce using rule 35 (exp -> CHAR .)
    COMMA           reduce using rule 35 (exp -> CHAR .)
    RPAREN          reduce using rule 35 (exp -> CHAR .)


state 41

    (36) exp -> BOOL .

    SEMICOLON       reduce using rule 36 (exp -> BOOL .)
    PLUS            reduce using rule 36 (exp -> BOOL .)
    MINUS           reduce using rule 36 (exp -> BOOL .)
    DIVIDE          reduce using rule 36 (exp -> BOOL .)
    MULTIPLY        reduce using rule 36 (exp -> BOOL .)
    MODULUS         reduce using rule 36 (exp -> BOOL .)
    POWER           reduce using rule 36 (exp -> BOOL .)
    LESSTHAN        reduce using rule 36 (exp -> BOOL .)
    GREATERTHAN     reduce using rule 36 (exp -> BOOL .)
    GREATERTHANEQUALTO reduce using rule 36 (exp -> BOOL .)
    LESSTHANEQUALTO reduce using rule 36 (exp -> BOOL .)
    NOTEQUAL        reduce using rule 36 (exp -> BOOL .)
    EQUALEQUAL      reduce using rule 36 (exp -> BOOL .)
    AND             reduce using rule 36 (exp -> BOOL .)
    OR              reduce using rule 36 (exp -> BOOL .)
    COMMA           reduce using rule 36 (exp -> BOOL .)
    RPAREN          reduce using rule 36 (exp -> BOOL .)


state 42

    (7) stmt -> NAME operator SEMICOLON .

    STRUCT          reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    NAME            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    IF              reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    ELIF            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    ELSE            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    PRINT           reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    FOR             reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    int             reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    string          reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    float           reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    bool            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    char            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    $end            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    RCBRACKET       reduce using rule 7 (stmt -> NAME operator SEMICOLON .)
    NEXT            reduce using rule 7 (stmt -> NAME operator SEMICOLON .)


state 43

    (10) stmt -> IF LPAREN exp . RPAREN LCBRACKET stmt RCBRACKET
    (14) exp -> exp . PLUS exp
    (15) exp -> exp . MINUS exp
    (16) exp -> exp . DIVIDE exp
    (17) exp -> exp . MULTIPLY exp
    (18) exp -> exp . MODULUS exp
    (19) exp -> exp . POWER exp
    (20) exp -> exp . LESSTHAN exp
    (21) exp -> exp . GREATERTHAN exp
    (22) exp -> exp . GREATERTHANEQUALTO exp
    (23) exp -> exp . LESSTHANEQUALTO exp
    (24) exp -> exp . NOTEQUAL exp
    (25) exp -> exp . EQUALEQUAL exp
    (26) exp -> exp . AND exp
    (27) exp -> exp . OR exp
    (31) exp -> exp . COMMA exp

    RPAREN          shift and go to state 71
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    DIVIDE          shift and go to state 56
    MULTIPLY        shift and go to state 57
    MODULUS         shift and go to state 58
    POWER           shift and go to state 59
    LESSTHAN        shift and go to state 60
    GREATERTHAN     shift and go to state 61
    GREATERTHANEQUALTO shift and go to state 62
    LESSTHANEQUALTO shift and go to state 63
    NOTEQUAL        shift and go to state 64
    EQUALEQUAL      shift and go to state 65
    AND             shift and go to state 66
    OR              shift and go to state 67
    COMMA           shift and go to state 68


state 44
